--- a/Catalog/CallbacksController.xib
+++ b/Catalog/CallbacksController.xib
@@ -1,66 +1,75 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CallbacksController">
             <connections>
                 <outlet property="view" destination="1" id="Il9-9I-AqV"/>
-                <outlet property="webView" destination="4" id="12"/>
+                <outlet property="webLayerPlaceholder" destination="043-Fu-e5J" id="wOk-U2-U18"/>
+                <outlet property="webViewPlaceholder" destination="75Q-LU-gWw" id="ZMR-Cg-3e2"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <dataDetectorType key="dataDetectorTypes"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="11"/>
-                    </connections>
-                </webView>
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="75Q-LU-gWw">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <view hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="043-Fu-e5J">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21">
-                    <rect key="frame" x="0.0" y="556" width="300" height="44"/>
+                    <rect key="frame" x="0.0" y="623" width="187.5" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="4eI-Kg-hx5"/>
                     </constraints>
                     <state key="normal" title="Do some maths">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="DoSomeMaths:" destination="-1" eventType="touchUpInside" id="gCh-BN-X1D"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22">
-                    <rect key="frame" x="300" y="556" width="300" height="44"/>
+                    <rect key="frame" x="187.5" y="623" width="187.5" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="z7a-as-Vaq"/>
                     </constraints>
                     <state key="normal" title="Test Auto">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="AutoTest:" destination="-1" eventType="touchUpInside" id="0jM-Tg-c7h"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="4" firstAttribute="top" secondItem="1" secondAttribute="top" id="7b0-RT-84L"/>
+                <constraint firstItem="043-Fu-e5J" firstAttribute="trailing" secondItem="75Q-LU-gWw" secondAttribute="trailing" id="18R-Gr-Jyg"/>
+                <constraint firstItem="043-Fu-e5J" firstAttribute="leading" secondItem="75Q-LU-gWw" secondAttribute="leading" id="8f8-KC-uys"/>
+                <constraint firstItem="75Q-LU-gWw" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="9kM-2O-EMg"/>
                 <constraint firstItem="21" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="Ats-xE-ECV"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Hiy-uX-5hJ"/>
-                <constraint firstItem="4" firstAttribute="width" secondItem="1" secondAttribute="width" id="IcV-Fy-bbZ"/>
+                <constraint firstItem="75Q-LU-gWw" firstAttribute="top" secondItem="1" secondAttribute="top" id="Exe-F4-FXc"/>
+                <constraint firstItem="043-Fu-e5J" firstAttribute="top" secondItem="75Q-LU-gWw" secondAttribute="top" id="Gu7-mU-AzR"/>
                 <constraint firstItem="22" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="KFu-8f-752"/>
-                <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" id="LZY-Vu-gbp"/>
-                <constraint firstAttribute="bottom" secondItem="21" secondAttribute="bottom" id="U7T-Yb-4zC"/>
-                <constraint firstAttribute="bottom" secondItem="22" secondAttribute="bottom" id="bkY-8S-yrU"/>
-                <constraint firstItem="22" firstAttribute="top" secondItem="4" secondAttribute="bottom" id="gaf-WL-OUo"/>
+                <constraint firstItem="22" firstAttribute="trailing" secondItem="1" secondAttribute="trailing" id="LZY-Vu-gbp"/>
+                <constraint firstItem="21" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="U7T-Yb-4zC"/>
+                <constraint firstItem="21" firstAttribute="top" secondItem="75Q-LU-gWw" secondAttribute="bottom" id="W4H-jh-ll9"/>
+                <constraint firstItem="043-Fu-e5J" firstAttribute="bottom" secondItem="75Q-LU-gWw" secondAttribute="bottom" id="Z9z-E0-q7E"/>
+                <constraint firstItem="22" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="bkY-8S-yrU"/>
+                <constraint firstItem="75Q-LU-gWw" firstAttribute="width" secondItem="1" secondAttribute="width" id="rxV-8U-KkG"/>
                 <constraint firstItem="21" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="w5G-Bl-DJT"/>
             </constraints>
         </view>
