--- a/Catalog/EventsController.xib
+++ b/Catalog/EventsController.xib
@@ -1,67 +1,76 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EventsController">
             <connections>
                 <outlet property="view" destination="oQw-M9-06M" id="Y83-GM-JSA"/>
-                <outlet property="webView" destination="pgx-Cc-xEM" id="HT7-2a-Fau"/>
+                <outlet property="webLayerPlaceholder" destination="pT3-dt-4lN" id="Yv0-K6-2hk"/>
+                <outlet property="webViewPlaceholder" destination="YC0-bz-uT3" id="r6F-QJ-Bpk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="oQw-M9-06M">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pgx-Cc-xEM">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <dataDetectorType key="dataDetectorTypes"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="PVm-xQ-IfF"/>
-                    </connections>
-                </webView>
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YC0-bz-uT3">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <view hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pT3-dt-4lN">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHK-9c-Oz0">
-                    <rect key="frame" x="0.0" y="556" width="300" height="44"/>
+                    <rect key="frame" x="0.0" y="623" width="187.5" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="mKL-l1-mZl"/>
                     </constraints>
                     <state key="normal" title="--">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="onZoomOutButton:" destination="-1" eventType="touchUpInside" id="QWC-Z1-pvg"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlL-Rj-xmA">
-                    <rect key="frame" x="300" y="556" width="300" height="44"/>
+                    <rect key="frame" x="187.5" y="623" width="187.5" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="ePl-i8-MuD"/>
                     </constraints>
                     <state key="normal" title="++">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="onZoomInButton:" destination="-1" eventType="touchUpInside" id="35W-3Y-bbw"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="tlL-Rj-xmA" secondAttribute="trailing" id="6cu-3u-eHG"/>
+                <constraint firstItem="YC0-bz-uT3" firstAttribute="bottom" secondItem="VHK-9c-Oz0" secondAttribute="top" id="34a-fh-gXV"/>
+                <constraint firstItem="tlL-Rj-xmA" firstAttribute="trailing" secondItem="oQw-M9-06M" secondAttribute="trailing" id="6cu-3u-eHG"/>
+                <constraint firstItem="pT3-dt-4lN" firstAttribute="trailing" secondItem="YC0-bz-uT3" secondAttribute="trailing" id="80o-Wx-chl"/>
                 <constraint firstItem="tlL-Rj-xmA" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" multiplier="0.5" id="GIq-Xo-1NP"/>
-                <constraint firstAttribute="bottom" secondItem="VHK-9c-Oz0" secondAttribute="bottom" id="P8w-Zu-lqk"/>
-                <constraint firstItem="pgx-Cc-xEM" firstAttribute="leading" secondItem="oQw-M9-06M" secondAttribute="leading" id="T0z-9o-59T"/>
-                <constraint firstAttribute="bottom" secondItem="tlL-Rj-xmA" secondAttribute="bottom" id="cqP-0m-b1o"/>
-                <constraint firstItem="tlL-Rj-xmA" firstAttribute="top" secondItem="pgx-Cc-xEM" secondAttribute="bottom" id="iDt-gR-zeX"/>
-                <constraint firstItem="pgx-Cc-xEM" firstAttribute="top" secondItem="oQw-M9-06M" secondAttribute="top" id="lh6-Xq-hlR"/>
+                <constraint firstItem="VHK-9c-Oz0" firstAttribute="bottom" secondItem="oQw-M9-06M" secondAttribute="bottom" id="P8w-Zu-lqk"/>
+                <constraint firstItem="YC0-bz-uT3" firstAttribute="top" secondItem="oQw-M9-06M" secondAttribute="top" id="PzA-to-i1S"/>
+                <constraint firstItem="pT3-dt-4lN" firstAttribute="bottom" secondItem="YC0-bz-uT3" secondAttribute="bottom" id="UQG-zd-JYx"/>
+                <constraint firstItem="pT3-dt-4lN" firstAttribute="top" secondItem="YC0-bz-uT3" secondAttribute="top" id="YEO-Bu-Nz8"/>
+                <constraint firstItem="tlL-Rj-xmA" firstAttribute="bottom" secondItem="oQw-M9-06M" secondAttribute="bottom" id="cqP-0m-b1o"/>
+                <constraint firstItem="YC0-bz-uT3" firstAttribute="leading" secondItem="oQw-M9-06M" secondAttribute="leading" id="g9K-tP-Tsh"/>
                 <constraint firstItem="VHK-9c-Oz0" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" multiplier="0.5" id="mCb-9E-pp4"/>
+                <constraint firstItem="pT3-dt-4lN" firstAttribute="leading" secondItem="YC0-bz-uT3" secondAttribute="leading" id="mLg-BG-SD2"/>
+                <constraint firstItem="YC0-bz-uT3" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" id="oc8-Jh-lbL"/>
                 <constraint firstItem="VHK-9c-Oz0" firstAttribute="leading" secondItem="oQw-M9-06M" secondAttribute="leading" id="u7s-Ck-CcQ"/>
-                <constraint firstItem="pgx-Cc-xEM" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" id="wQ2-Zb-4bt"/>
             </constraints>
         </view>
     </objects>
